login with githup

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GITHUB_CLIENT_ID=3500bf7db3d1a1c7bce4
+GITHUB_CLIENT_SECRET=3e159a710cf29c999cb5cf036b71bfb2d9d60485
